<resources>
    <string name="app_name">IndoorFarming</string>
    <!-- Strings related to login -->

    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="RepeatPassword">Repeat Password</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="SignUp">Sign Up</string>
    <string name="ConfCode">Enter Confirmation Code Here</string>
    <string name="Confirm">Confirm</string>
    <string name="Verify">Verify</string>
    <string name="NotAccount">Don\'t have account?</string>
    <string name="ForgetPass">Forget Your Password?</string>
    <string name="AgreeTerms">Agree to the Terms and Conditions</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@androidData.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="displaying_avg">%1$s : %2$s</string>

    <string-array name="Duration">
        <item>All 24-Hours</item>
        <item>Last Two Hours</item>
        <item>Last One hour</item>    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
